--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,40 @@
 apply plugin: 'com.android.application'
 
+
+def buildNumber() {
+    if (project.hasProperty('buildNumber')) {
+        return "." + buildNumber
+    } else {
+        return ""
+    }
+}
+
+def buildNumberInt() {
+    if (project.hasProperty('buildNumber')) {
+        return Integer.parseInt(buildNumber)
+    } else {
+        return 0
+    }
+}
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+
+
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion "${rootProject.ext.buildToolsVersion}"
+
     defaultConfig {
+        def versionMajor = 0
+
         applicationId "com.dbbest.amateurfeed"
-        minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode versionMajor + buildNumberInt()
+        versionName "${versionMajor}${buildNumber()}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
+
+
     }
     buildTypes {
         release {
@@ -17,6 +42,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'OPEN_FIREBASE_API_KEY', FirebaseApiKey
+    }
+}
+
+ext {
+    multidex = '1.0.0'
+    retrofit = '2.1.0'
+    okhttp = '3.4.1'
+    googlePlaySevices = '9.6.1'
+    facebookSdk = '4.16.0'
+    glide = '3.7.0'
 }
 
 dependencies {
@@ -26,4 +63,21 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
+
+    compile "com.android.support:multidex:${multidex}"
+    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
+
+    compile "com.squareup.retrofit2:retrofit:${retrofit}"
+    compile "com.squareup.retrofit2:converter-gson:${retrofit}"
+
+    compile "com.facebook.android:facebook-android-sdk:${facebookSdk}"
+    compile project(path: ':common-library')
+
+    compile "com.google.firebase:firebase-core:${googlePlaySevices}"
+    compile "com.google.firebase:firebase-messaging:${googlePlaySevices}"
+
+    compile "com.google.android.gms:play-services-location:${googlePlaySevices}"
+    compile "com.google.android.gms:play-services-maps:${googlePlaySevices}"
+    compile "com.google.android.gms:play-services-places:${googlePlaySevices}"
 }
+apply plugin: 'com.google.gms.google-services'
