--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
     }
     buildTypes.each {
         it.buildConfigField 'String', 'OPEN_FIREBASE_API_KEY', FirebaseApiKey
+        it.buildConfigField 'String','API_SERVER_URL', ApiServerUrl
     }
 }
 
