--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest package="com.dbbest.amateurfeed"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -22,8 +20,10 @@
             android:theme="@style/AppTheme.Main">
 
         </activity>
-        <activity android:name=".ui.HomeActivity"/>
-        <activity android:name=".ui.SignUpActivity"/>
+        <activity android:name=".ui.HomeActivity"
+                  android:theme="@style/AppTheme.Main"/>
+        <activity android:name=".ui.SignUpActivity"
+                  android:theme="@style/AppTheme.Main"/>
         <activity
             android:name=".ui.SplashActivity"
             android:theme="@style/SplashTheme"
