--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,16 @@
             android:theme="@style/AppTheme.Main">
 
         </activity>
-        <activity android:name=".ui.HomeActivity"
-                  android:theme="@style/AppTheme.Main"/>
-        <activity android:name=".ui.SignUpActivity"
-                  android:theme="@style/AppTheme.Main"/>
+        <activity
+            android:name=".ui.HomeActivity"
+            android:theme="@style/AppTheme.Main"/>
+        <activity
+            android:name=".ui.SignUpActivity"
+            android:theme="@style/AppTheme.Main"/>
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:label="@string/label_activity_settings"
+            android:theme="@style/AppTheme.Settings"/>
         <activity
             android:name=".ui.SplashActivity"
             android:theme="@style/SplashTheme"
@@ -33,6 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
