--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
             </intent-filter>
         </activity>
 
+        <provider
+            android:name="com.dbbest.amateurfeed.data.FeedProvider"
+            android:authorities="@string/content_authority"
+            android:exported="false"
+            android:syncable="true"/>
+
     </application>
 
 </manifest>
