--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
-        android:allowBackup="true"
+        android:name=".App"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -45,6 +46,10 @@
             android:authorities="@string/content_authority"
             android:exported="false"
             android:syncable="true"/>
+
+        <service
+            android:name="com.dbbest.amateurfeed.app.net.command.ExecutionService"
+            android:exported="false" />
 
     </application>
 
