--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,12 @@ dependencies {
     compile "com.google.android.gms:play-services-location:${googlePlaySevices}"
     compile "com.google.android.gms:play-services-maps:${googlePlaySevices}"
     compile "com.google.android.gms:play-services-places:${googlePlaySevices}"
+
+
+    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:gridlayout-v7:25.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 apply plugin: 'com.google.gms.google-services'
