--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
 /build
+/local.properties
 /captures
+.idea/
+apk-output/
 .externalNativeBuild
+.DS_Store
+
