--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 FirebaseApiKey="AIzaSyCNWpEABrnfzpOnaSydTLpeoPhYPUgbxkQ"
-ApiServerUrl="http://192.168.3.133:2252"
+ApiServerUrl="http://192.168.3.133:2252/api/"
