--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
 
 
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
+
+
     <!-- Permissions required by the sync adapter -->
     <uses-permission
         android:name="android.permission.READ_SYNC_SETTINGS"/>
@@ -64,7 +67,7 @@
 
         <service
             android:name="com.dbbest.amateurfeed.app.net.command.ExecutionService"
-            android:exported="false" />
+            android:exported="false"/>
 
 
         <!-- SyncAdapter's dummy authentication service -->
