--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
 
 
-    <uses-feature android:name="android.hardware.camera" android:required="true"/>
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true"/>
 
 
     <!-- Permissions required by the sync adapter -->
@@ -36,7 +38,22 @@
         </activity>
         <activity
             android:name=".ui.HomeActivity"
-            android:theme="@style/AppTheme.Main"/>
+            android:theme="@style/AppTheme.Main">
+
+            <intent-filter>
+                <action
+                    android:name="android.intent.action.PICK"/>
+
+                <category
+                    android:name="android.intent.category.DEFAULT"/>
+                <category
+                    android:name="android.intent.category.OPENABLE"/>
+
+                <data android:mimeType="text/plain"/>
+                <data android:mimeType="image/*"/>
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".ui.SignUpActivity"
             android:theme="@style/AppTheme.Main"/>
@@ -59,11 +76,24 @@
             </intent-filter>
         </activity>
 
+
         <provider
             android:name="com.dbbest.amateurfeed.data.FeedProvider"
             android:authorities="@string/content_authority"
             android:exported="false"
             android:syncable="true"/>
+
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="@string/file_provider_authority"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths"/>
+        </provider>
+
 
         <service
             android:name="com.dbbest.amateurfeed.app.net.command.ExecutionService"
