--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,5 +88,8 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.microsoft.azure.android:azure-storage-android:1.0.0@aar'
+
 }
 apply plugin: 'com.google.gms.google-services'
