--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,12 @@ def buildNumberInt() {
         return 0
     }
 }
+
 android {
 
 
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion '25.0.0'
+    buildToolsVersion "${rootProject.ext.buildToolsVersion}"
 
     defaultConfig {
         def versionMajor = 0
@@ -44,7 +45,7 @@ android {
     }
     buildTypes.each {
         it.buildConfigField 'String', 'OPEN_FIREBASE_API_KEY', FirebaseApiKey
-        it.buildConfigField 'String','API_SERVER_URL', ApiServerUrl
+        it.buildConfigField 'String', 'API_SERVER_URL', ApiServerUrl
     }
 }
 
@@ -56,6 +57,7 @@ ext {
     facebookSdk = '4.16.0'
     glide = '3.7.0'
     stetho = '1.4.1'
+    azureStorage = '1.0.0@aar'
 }
 
 dependencies {
@@ -63,19 +65,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
     compile "com.android.support:multidex:${multidex}"
-    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
-    compile 'com.takisoft.fix:preference-v7:25.0.1.0'
+    compile "com.takisoft.fix:preference-v7:25.0.1.0"
     compile "com.squareup.retrofit2:retrofit:${retrofit}"
     compile "com.squareup.retrofit2:converter-gson:${retrofit}"
     compile "com.facebook.stetho:stetho:${stetho}"
     compile "com.facebook.stetho:stetho-okhttp3:${stetho}"
     compile "com.squareup.okhttp3:logging-interceptor:${okhttp}"
-
     compile "com.facebook.android:facebook-android-sdk:${facebookSdk}"
-
     compile project(path: ':common-library')
     compile "com.google.firebase:firebase-core:${googlePlaySevices}"
     compile "com.google.firebase:firebase-messaging:${googlePlaySevices}"
@@ -83,13 +80,14 @@ dependencies {
     compile "com.google.android.gms:play-services-maps:${googlePlaySevices}"
     compile "com.google.android.gms:play-services-places:${googlePlaySevices}"
 
-    compile 'com.android.support:cardview-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:gridlayout-v7:25.1.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
+    compile "com.android.support:design:${rootProject.ext.supportLibraryVersion}"
+    compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibraryVersion}"
+    compile "com.android.support:gridlayout-v7:${rootProject.ext.supportLibraryVersion}"
 
-    compile 'com.microsoft.azure.android:azure-storage-android:1.0.0@aar'
+    compile "com.github.bumptech.glide:glide:${glide}"
+    compile "com.microsoft.azure.android:azure-storage-android:${azureStorage}"
 
+    testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
