--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,14 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 ext {
-    supportLibraryVersion = '24.2.1'
-    buildToolsVersion = '24.0.2'
+
+    supportLibraryVersion = '25.0.1'
+    buildToolsVersion = '25.0.1'
+    ignoreFailures = false
     minSdkVersion = 19
     minSdkDevelopVersion = 21
-    compileSdkVersion = 25
-    targetSdkVersion = 25
+    compileSdkVersion = 24
+    targetSdkVersion = 24
 
 
 }
