--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,129 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.dbbest.amateurfeed"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  package="com.dbbest.amateurfeed">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-
-
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true"/>
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.VIBRATE" />
 
 
-    <!-- Permissions required by the sync adapter -->
-    <uses-permission
-        android:name="android.permission.READ_SYNC_SETTINGS"/>
-    <uses-permission
-        android:name="android.permission.WRITE_SYNC_SETTINGS"/>
-    <uses-permission
-        android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
-    <uses-permission
-        android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-    <application
-        android:name=".App"
-        android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".ui.StartActivity"
-            android:theme="@style/AppTheme.Main">
-
-        </activity>
-        <activity
-            android:name=".ui.HomeActivity"
-            android:theme="@style/AppTheme.Main">
-
-            <intent-filter>
-                <action
-                    android:name="android.intent.action.PICK"/>
-
-                <category
-                    android:name="android.intent.category.DEFAULT"/>
-                <category
-                    android:name="android.intent.category.OPENABLE"/>
-
-                <data android:mimeType="text/plain"/>
-                <data android:mimeType="image/*"/>
-            </intent-filter>
-
-        </activity>
-        <activity
-            android:name=".ui.SignUpActivity"
-            android:theme="@style/AppTheme.Main"/>
-        <activity
-            android:name=".ui.ResetPasswordActivity"
-            android:theme="@style/AppTheme.Main">
-
-        </activity>
-        <activity
-            android:name=".ui.SettingsActivity"
-            android:label="@string/label_activity_settings"
-            android:theme="@style/AppTheme.Settings"/>
-        <activity
-            android:name=".ui.SplashActivity"
-            android:theme="@style/SplashTheme"
-            >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+  <uses-feature
+    android:name="android.hardware.camera"
+    android:required="true" />
 
 
-        <provider
-            android:name="com.dbbest.amateurfeed.data.FeedProvider"
-            android:authorities="@string/content_authority"
-            android:exported="false"
-            android:syncable="true"/>
+  <!-- Permissions required by the sync adapter -->
+  <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+  <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+  <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+  <application
+    android:allowBackup="false"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:name=".App"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme">
+    <activity
+      android:name=".ui.StartActivity"
+      android:theme="@style/AppTheme.Main">
+
+    </activity>
+    <activity
+      android:name=".ui.HomeActivity"
+      android:theme="@style/AppTheme.Main">
+
+      <intent-filter>
+        <action android:name="android.intent.action.PICK" />
+
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.OPENABLE" />
+
+        <data android:mimeType="text/plain" />
+        <data android:mimeType="image/*" />
+      </intent-filter>
+
+    </activity>
+    <activity
+      android:name=".ui.SignUpActivity"
+      android:theme="@style/AppTheme.Main" />
+    <activity
+      android:name=".ui.ResetPasswordActivity"
+      android:theme="@style/AppTheme.Main">
+
+    </activity>
+    <activity
+      android:label="@string/label_activity_settings"
+      android:name=".ui.SettingsActivity"
+      android:theme="@style/AppTheme.Settings" />
+    <activity
+      android:name=".ui.SplashActivity"
+      android:theme="@style/SplashTheme">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
 
 
-        <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="@string/file_provider_authority"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/filepaths"/>
-        </provider>
+    <provider
+      android:authorities="@string/content_authority"
+      android:exported="false"
+      android:name="com.dbbest.amateurfeed.data.FeedProvider"
+      android:syncable="true" />
 
 
-        <service
-            android:name="com.dbbest.amateurfeed.app.net.command.ExecutionService"
-            android:exported="false"/>
+    <provider
+      android:authorities="@string/file_provider_authority"
+      android:exported="false"
+      android:grantUriPermissions="true"
+      android:name="android.support.v4.content.FileProvider">
+      <meta-data
+        android:name="android.support.FILE_PROVIDER_PATHS"
+        android:resource="@xml/filepaths" />
+    </provider>
 
 
-        <!-- SyncAdapter's dummy authentication service -->
-        <service android:name="com.dbbest.amateurfeed.data.sync.AmateurfeedAuthenticatorService">
-            <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator"/>
-            </intent-filter>
-            <meta-data
-                android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/authenticator"/>
-        </service>
-
-        <!-- The SyncAdapter service -->
-        <service
-            android:name="com.dbbest.amateurfeed.data.sync.AmateurfeedSyncService"
-            android:exported="true"
-            >
-            <intent-filter>
-                <action android:name="android.content.SyncAdapter"/>
-            </intent-filter>
-            <meta-data
-                android:name="android.content.SyncAdapter"
-                android:resource="@xml/syncadapter"/>
-        </service>
+    <service
+      android:exported="false"
+      android:name="com.dbbest.amateurfeed.app.net.command.ExecutionService" />
 
 
-    </application>
+    <!-- SyncAdapter's dummy authentication service -->
+    <service android:name="com.dbbest.amateurfeed.data.sync.AmateurfeedAuthenticatorService">
+      <intent-filter>
+        <action android:name="android.accounts.AccountAuthenticator" />
+      </intent-filter>
+      <meta-data
+        android:name="android.accounts.AccountAuthenticator"
+        android:resource="@xml/authenticator" />
+    </service>
+
+
+    <!-- Declaring Service in Manifest -->
+    <service
+      android:exported="false"
+      android:name=".app.azur.service.BlobUploadService" />
+
+    <!-- The SyncAdapter service -->
+    <service
+      android:exported="true"
+      android:name="com.dbbest.amateurfeed.data.sync.AmateurfeedSyncService">
+      <intent-filter>
+        <action android:name="android.content.SyncAdapter" />
+      </intent-filter>
+      <meta-data
+        android:name="android.content.SyncAdapter"
+        android:resource="@xml/syncadapter" />
+    </service>
+
+
+  </application>
 
 </manifest>
