--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
+apply from: "$project.rootDir/keystore/signing-config.gradle"
+
 def buildNumber() {
     if (project.hasProperty('buildNumber')) {
         return Integer.parseInt(buildNumber)
