--- a/keystore/signing-config.gradle
+++ b/keystore/signing-config.gradle
@@ -1,7 +1,13 @@
 android {
     signingConfigs {
+        debug {
+            keyAlias 'androiddebug'
+            keyPassword 'androidDebug'
+            storePassword 'androidDebug'
+            storeFile file('../keystore/debug-keystore.jks')
+        }
         release {
-            keyAlias 'androidreleasekey'
+            keyAlias 'androidrelease'
             keyPassword 'androidRelease'
             storePassword 'androidRelease'
             storeFile file('../keystore/release-keystore.jks')
